--- a/TopButton/TButton.css
+++ b/TopButton/TButton.css
@@ -1,8 +1,7 @@
 /* Style the button */
 #scrollToTopBtn {
-    display: none; /* Hidden by default */
-    position: fixed; /* Fixed/sticky position */
-    bottom: 20px; /* Place the button at the bottom of the page */
+    position: fixed; /* Fixed position */
+    bottom: 20px; /* Place the button at the bottom */
     right: 30px; /* Place the button 30px from the right */
     z-index: 99; /* Make sure it does not overlap */
     border: none; /* Remove borders */
@@ -12,8 +11,13 @@
     cursor: pointer; /* Add a mouse pointer on hover */
     padding: 15px; /* Some padding */
     border-radius: 10px; /* Rounded corners */
+    transition: opacity 0.3s; /* Add transition for smooth fade in/out */
 }
 
 #scrollToTopBtn:hover {
     background-color: #555; /* Add a dark-grey background on hover */
+}
+
+#scrollToTopBtn.hidden {
+    opacity: 0; /* Hide the button by default */
 }
